--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/ActiveAndroid.jar')
+    compile 'com.android.support:support-v4:20.0.0'
 }
